<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  *
  ~  **    Copyright 2015, The LimeIME Open Source Project
  ~  **
  ~  **    Project Url: http://github.com/lime-ime/limeime/
  ~  **                 http://android.toload.net/
  ~  **
  ~  **    This program is free software: you can redistribute it and/or modify
  ~  **    it under the terms of the GNU General Public License as published by
  ~  **    the Free Software Foundation, either version 3 of the License, or
  ~  **    (at your option) any later version.
  ~  *
  ~  **    This program is distributed in the hope that it will be useful,
  ~  **    but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  **    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  **    GNU General Public License for more details.
  ~  *
  ~  **    You should have received a copy of the GNU General Public License
  ~  **    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~  *
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        android:layout_weight="1" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/im_custom"
                    android:id="@+id/btnImportCustom"
                    android:layout_weight="1" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/im_array"
                    android:id="@+id/btnImportArray"
                    android:layout_weight="1" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/im_array10"
                    android:id="@+id/btnImportArray10" />
                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/im_cj"
                    android:id="@+id/btnImportCj" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/im_cj5"
                    android:id="@+id/btnImportCj5" />
                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/im_dayi"
                    android:id="@+id/btnImportDayi" />
            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/im_ecj"
                    android:id="@+id/btnImportEcj" />
                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/im_ez"
                    android:id="@+id/btnImportEz" />
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/im_phonetic"
                    android:id="@+id/btnImportPhonetic" />
                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/im_pinyin"
                    android:id="@+id/btnImportPinyin" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/im_scj"
                    android:id="@+id/btnImportScj" />
                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/im_wb"
                    android:id="@+id/btnImportWb" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/im_hs"
                android:id="@+id/btnImportHs"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/related"
                android:id="@+id/btnImportRelated"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1" />

        </LinearLayout>



    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_cancel"
        android:id="@+id/btnImportCancel"
        android:layout_gravity="center_horizontal" />


</LinearLayout>