<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  *
  ~  **    Copyright 2015, The LimeIME Open Source Project
  ~  **
  ~  **    Project Url: http://github.com/lime-ime/limeime/
  ~  **                 http://android.toload.net/
  ~  **
  ~  **    This program is free software: you can redistribute it and/or modify
  ~  **    it under the terms of the GNU General Public License as published by
  ~  **    the Free Software Foundation, either version 3 of the License, or
  ~  **    (at your option) any later version.
  ~  *
  ~  **    This program is distributed in the hope that it will be useful,
  ~  **    but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  **    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  **    GNU General Public License for more details.
  ~  *
  ~  **    You should have received a copy of the GNU General Public License
  ~  **    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~  *
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/payment_service_success"
        android:id="@+id/txtPaymentSuccess"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:padding="10dp"
        android:visibility="gone"
        android:textSize="24sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/payment_plan_1"
        android:id="@+id/btnPaymentPlan1"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:padding="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/payment_plan_2"
        android:id="@+id/btnPaymentPlan2"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:padding="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/payment_plan_3"
        android:id="@+id/btnPaymentPlan3"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:padding="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/dialog_cancel"
        android:id="@+id/btnPaymentCancel"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:padding="10dp" />
</LinearLayout>