<!--
  ~ /*
  ~  *
  ~  **    Copyright 2015, The LimeIME Open Source Project
  ~  **
  ~  **    Project Url: http://github.com/lime-ime/limeime/
  ~  **                 http://android.toload.net/
  ~  **
  ~  **    This program is free software: you can redistribute it and/or modify
  ~  **    it under the terms of the GNU General Public License as published by
  ~  **    the Free Software Foundation, either version 3 of the License, or
  ~  **    (at your option) any later version.
  ~  *
  ~  **    This program is distributed in the hope that it will be useful,
  ~  **    but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  **    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  **    GNU General Public License for more details.
  ~  *
  ~  **    You should have received a copy of the GNU General Public License
  ~  **    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~  *
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.toload.main.hd.ManageIMFragment">

    <LinearLayout
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/manage_im_keyboard"
            android:id="@+id/btnManageImKeyboard"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:textStyle="bold" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleManageIm"
                    android:layout_column="1"
                    android:checked="false"
                    android:textOff="@string/manage_im_root"
                    android:textOn="@string/manage_im_word"
                    android:textStyle="bold" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtManageImSearch"
                    android:layout_column="2"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manage_im_search"
                    android:id="@+id/btnManageImSearch"
                    android:layout_column="11"
                    android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_im_add"
                android:id="@+id/btnManageImAdd"
                android:layout_column="11"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp" />

        <GridView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gridManageIm"
            android:numColumns="auto_fit"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:verticalSpacing="2dp"
            android:horizontalSpacing="2dp"
            android:choiceMode="multipleChoice"
            android:columnWidth="150dp"
            android:clickable="true">

        </GridView>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_im_previous"
            android:id="@+id/btnManageImPrevious"
            android:layout_margin="2dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="0"
            android:id="@+id/txtNavigationInfo"
            android:textSize="8pt"
            android:gravity="center_horizontal"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_im_next"
            android:id="@+id/btnManageImNext"
            android:layout_margin="2dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
